--- a/pom.xml
+++ b/pom.xml
@@ -137,13 +137,6 @@
             <artifactId>jquery</artifactId>
             <version>2.1.0-2</version>
         </dependency>
-
-		<dependency>
-			<groupId>com.sr.biz</groupId>
-			<artifactId>freightbit-lib</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
     </dependencies>
 
 
@@ -180,6 +173,15 @@
                         <version>1.2.17</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
